src/test/deca/context/valid/provided/fonction.deca
// Description:
//    Programme faisant la déclaration d'une fonction en l'utilisant.
//
// Resultats: true
//    
//
// Historique:
//    cree le 01/01/2022

{
        public bool equals(int x, int y){
        	return(x == y);
        }
        public void static void main(){
        	println(equals(5, 6));
        }
}
