src/test/deca/context/invalid/provided/while_condition6.deca
/*/ Description:
//    Programme utilisant une boucle while de façon incorrecte.
//
// Resultats: Ligne 11 Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        int j = 5;
        while("bhjh"){
        	println(j);
        }
}
